tests/snapshots/ebook_golden_tests__check_scenario@kindle_hq__OEBPS__Text__cb-0001-cb-x.xhtml.snap
---
source: tests/ebook_golden_tests.rs
expression: payload
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
<head>
<title>cb-0001-cb-x</title>
<link href="style.css" type="text/css" rel="stylesheet"/>
<meta name="viewport" content="width=533, height=800"/>
</head>
<body style="background-color:#000000;">
<div style="text-align:center;">
<div style="display:none;">.</div>
<img width="800" height="1200" src="../Images/cb-0001-cb-x.jpg"/>
</div>
<div id="PV">
<div id="PV-TL">
<a style="display:inline-block;width:100%;height:100%;" class="app-amzn-magnify" data-app-amzn-magnify='{"targetId":"PV-TL-P", "ordinal":1}'></a>
</div>
<div id="PV-TR">
<a style="display:inline-block;width:100%;height:100%;" class="app-amzn-magnify" data-app-amzn-magnify='{"targetId":"PV-TR-P", "ordinal":2}'></a>
</div>
<div id="PV-BL">
<a style="display:inline-block;width:100%;height:100%;" class="app-amzn-magnify" data-app-amzn-magnify='{"targetId":"PV-BL-P", "ordinal":3}'></a>
</div>
<div id="PV-BR">
<a style="display:inline-block;width:100%;height:100%;" class="app-amzn-magnify" data-app-amzn-magnify='{"targetId":"PV-BR-P", "ordinal":4}'></a>
</div>
</div>
<div class="PV-P" id="PV-TL-P" style="background-color:#000000;">
<img style="position:absolute;left:0;top:0;" src="../Images/cb-0001-cb-x.jpg" width="800" height="1200"/>
</div>
<div class="PV-P" id="PV-TR-P" style="background-color:#000000;">
<img style="position:absolute;right:0;top:0;" src="../Images/cb-0001-cb-x.jpg" width="800" height="1200"/>
</div>
<div class="PV-P" id="PV-BL-P" style="background-color:#000000;">
<img style="position:absolute;left:0;bottom:0;" src="../Images/cb-0001-cb-x.jpg" width="800" height="1200"/>
</div>
<div class="PV-P" id="PV-BR-P" style="background-color:#000000;">
<img style="position:absolute;right:0;bottom:0;" src="../Images/cb-0001-cb-x.jpg" width="800" height="1200"/>
</div>
</body>
</html>
<EOF: newline>
